syntax = "proto3";

package users;

// Use your real module path here (e.g. github.com/you/yourrepo/users/pb)
option go_package = "github.com/LesterFernandes/tasks/users/pb;pb";

service UsersService {
  // Creates a new user
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
}

message CreateUserRequest {
  string email = 1;
  string user_name = 2;
  string name = 3;
}

message CreateUserResponse {
  int32 status = 1; // use int32 for status codes (like HTTP codes)
  string error = 2; // empty if no error
  string user_id = 3; // UUID (string is correct here)
}

message ListUsersRequest {}

message UserResponse {
  string email = 1;
  string user_name = 2;
  string name = 3;
  string user_id = 4;
}

message ListUsersResponse {
  int32 status = 1;
  string error = 2;
  repeated UserResponse users = 3;
}
